--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -451,6 +451,7 @@ QWidget#dogCardsContent, QScrollArea{
 
 
 QLabel{
+	font-size:15pt;
 	border:none;
 }</string>
          </property>
@@ -495,15 +496,18 @@ QLabel{
              </property>
              <layout class="QGridLayout" name="gridLayout_7">
               <property name="leftMargin">
-               <number>50</number>
+               <number>25</number>
               </property>
               <property name="topMargin">
-               <number>50</number>
+               <number>75</number>
               </property>
               <property name="rightMargin">
-               <number>50</number>
+               <number>25</number>
               </property>
-              <property name="spacing">
+              <property name="horizontalSpacing">
+               <number>20</number>
+              </property>
+              <property name="verticalSpacing">
                <number>50</number>
               </property>
              </layout>
